bugfix: force nowrap for slot machine reels in all instances

--- a/static/styles/empornium/style.css
+++ b/static/styles/empornium/style.css
@@ -2152,6 +2152,7 @@ span.reported {
 }  */
 
 .reels, .reelsi {
+    white-space:nowrap;
 }
 .reels.play {
 }
