--- a/static/styles/light/style.css
+++ b/static/styles/light/style.css
@@ -2219,6 +2219,7 @@ span.reported {
     color: red;
 }
 .reels, .reelsi {
+    white-space:nowrap;
 }
 .reels.play {
 }
