--- a/static/styles/modern/style.css
+++ b/static/styles/modern/style.css
@@ -2472,6 +2472,7 @@ img.win {
 } */
 
 .reels, .reelsi {
+    white-space:nowrap;
 }
 .reels.play {
 }
